--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,21 +10,16 @@ jobs:
   start-hardhat-node:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [16.x]
-
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+          with:
+            node-version: 16
+            cache: 'npm'
+                  
       - name: Install deps
         run: npm install
-    
+          
       - name: Run Testsuite
         continue-on-error: false
         run: |
