--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-          with:
-            node-version: 16
-            cache: 'npm'
+        with:
+          node-version: 16
+          cache: 'npm'
                   
-      - name: Install deps
-        run: npm install
+      - run: npm install
           
-      - name: Run Testsuite
-        continue-on-error: false
-        run: |
-          npx hardhat test
+      - run: npx hardhat test
